# similar

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.lock.msrv  Cargo.toml  Makefile  README.md  UPGRADING.md  UPSTREAM.md  clippy.toml
.github/scripts/: upstream_digest.py
.github/workflows/: ci.yml  publish.yml  releases.yml  tests.yml  upstream-digest.yaml
benches/: diffs.rs
examples/: assert.rs  close-matches.rs  float-buckets.rs  floating-point.rs  floating_point.rs  large.rs  nonstring.rs  original-slices.rs  owned-lookup.rs  patience.rs  serde.rs  terminal-inline.rs  terminal.rs  udiff.rs
examples/diffs/: README.md  case01.01.before_simple_edit.txt  case01_simple_edit.after.txt  case02.01.before_patience_reorder.txt  case02.02.after_patience_reorder.txt  case03_repeated_lines.after.txt  case03_repeated_lines.before.txt  case04_code_refactor.after.txt  case04_code_refactor.before.txt  case05.01.before_whitespace_punctuation.txt  case05.02.after_whitespace_punctuation.txt  case06_insertions_edges.after.txt  case06_insertions_edges.before.txt
fuzz/: Cargo.toml
fuzz/in/: char_diff
fuzz/src/: main.rs
src/: common.rs  deadline_support.rs  iter.rs  lib.rs  lookup.rs  text.rs  types.rs  udiff.rs  utils.rs
src/algorithms/: capture.rs  compact.rs  histogram.rs  hook.rs  hunt.rs  lcs.rs  mod.rs  myers.rs  patience.rs  preflight.rs  replace.rs  utils.rs
src/algorithms/snapshots/: likewise__algorithms__lcs__same.snap  similar__algorithms__myers__contiguous.snap  similar__algorithms__patience__patience.snap
src/snapshots/: likewise__udiff__unified_diff.snap  likewise__udiff__unified_diff_newline_hint-2.snap  likewise__udiff__unified_diff_newline_hint.snap  similar__text__captured_ops.snap  similar__text__char_diff.snap  similar__text__line_ops.snap  similar__text__unified_diff.snap  similar__text__virtual_newlines.snap  similar__udiff__unified_diff.snap  similar__udiff__unified_diff_newline_hint-2.snap  similar__udiff__unified_diff_newline_hint.snap
src/text/: abstraction.rs  inline.rs  mod.rs  udiff.rs  utils.rs
src/text/snapshots/: likewise__text__inline__serde.snap  likewise__text__serde.snap  likewise__text__serde_ops.snap  likewise__text__unified_diff.snap  similar__text__captured_word_ops.snap  similar__text__inline__line_ops_inline.snap  similar__text__inline__line_ops_inline_semantic_snapshot.snap  similar__text__line_ops.snap  similar__text__line_ops_inline.snap  similar__text__udiff__unified_diff.snap  similar__text__udiff__unified_diff_newline_hint-2.snap  similar__text__udiff__unified_diff_newline_hint.snap  similar__text__unified_diff.snap  similar__text__virtual_newlines.snap
wasm/: Cargo.toml  similar.wit
wasm/src/: lib.rs
